parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    DOT
    LCOR
    LKEY
    RCOR
    RKEY

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> assing
Rule 4     statement -> statementWhile
Rule 5     statement -> statementFor
Rule 6     statement -> statementIf
Rule 7     statement -> callPrint
Rule 8     statement -> callInput
Rule 9     statement -> BREAK
Rule 10    assing -> id EQUALS expr
Rule 11    assing -> id EQUALS callInput
Rule 12    assing -> id PLUS PLUS
Rule 13    assing -> id MINUS MINUS
Rule 14    id -> ID
Rule 15    expr -> expr PLUS term
Rule 16    expr -> expr MINUS term
Rule 17    expr -> term
Rule 18    expr -> MINUS expr
Rule 19    term -> term TIMES factor
Rule 20    term -> term POT factor
Rule 21    term -> term DIVIDE factor
Rule 22    term -> term PERCENT factor
Rule 23    term -> factor
Rule 24    factor -> NUMBER
Rule 25    factor -> ID
Rule 26    factor -> TEXT
Rule 27    factor -> CADENA
Rule 28    factor -> group
Rule 29    callPrint -> PRINT LPARENT term COMMA ID RPARENT
Rule 30    callPrint -> PRINT group
Rule 31    callPrint -> PRINT LPARENT RPARENT
Rule 32    callPrint -> callPrint statement
Rule 33    group -> LPARENT expr RPARENT
Rule 34    callInput -> INPUT group
Rule 35    callInput -> int LPARENT INPUT group RPARENT
Rule 36    callInput -> callInput statement
Rule 37    break -> BREAK
Rule 38    int -> INT
Rule 39    statementIf -> IF condition COLOM statement
Rule 40    statementWhile -> WHILE condition COLOM statement
Rule 41    statementWhile -> WHILE condition COLOM statement break
Rule 42    statementWhile -> WHILE condition COLOM statement break statement
Rule 43    condition -> comparation
Rule 44    condition -> comparation andor condition
Rule 45    comparation -> factor compara factor
Rule 46    compara -> LT
Rule 47    compara -> GT
Rule 48    compara -> LTE
Rule 49    compara -> GTE
Rule 50    compara -> COMPARATOR
Rule 51    compara -> UNEQUALS
Rule 52    andor -> OR
Rule 53    andor -> AND
Rule 54    statementFor -> FOR TEXT IN ID COLOM statement
Rule 55    statementFor -> FOR TEXT IN form
Rule 56    form -> RANGE LPARENT NUMBER RPARENT COLOM statement
Rule 57    form -> RANGE LPARENT ID RPARENT COLOM
Rule 58    form -> RANGE LPARENT LEN LPARENT id RPARENT RPARENT COLOM statement

Terminals, with rules where they appear

AND                  : 53
BOOL                 : 
BREAK                : 9 37
CADENA               : 27
COLOM                : 39 40 41 42 54 56 57 58
COMMA                : 29
COMPARATOR           : 50
DIVIDE               : 21
DOT                  : 
EQUALS               : 10 11
FOR                  : 54 55
GT                   : 47
GTE                  : 49
ID                   : 14 25 29 54 57
IF                   : 39
IN                   : 54 55
INPUT                : 34 35
INT                  : 38
LCOR                 : 
LEN                  : 58
LKEY                 : 
LPARENT              : 29 31 33 35 56 57 58 58
LT                   : 46
LTE                  : 48
MINUS                : 13 13 16 18
NUMBER               : 24 56
OR                   : 52
PERCENT              : 22
PLUS                 : 12 12 15
POT                  : 20
PRINT                : 29 30 31
RANGE                : 56 57 58
RCOR                 : 
RKEY                 : 
RPARENT              : 29 31 33 35 56 57 58 58
TEXT                 : 26 54 55
TIMES                : 19
UNEQUALS             : 51
WHILE                : 40 41 42
error                : 

Nonterminals, with rules where they appear

andor                : 44
assing               : 3
break                : 41 42
callInput            : 8 11 36
callPrint            : 7 32
compara              : 45
comparation          : 43 44
condition            : 39 40 41 42 44
expr                 : 10 15 16 18 33
factor               : 19 20 21 22 23 45 45
form                 : 55
group                : 28 30 34 35
id                   : 10 11 12 13 58
int                  : 35
program              : 2 0
statement            : 1 2 32 36 39 40 41 42 42 54 56 58
statementFor         : 5
statementIf          : 6
statementWhile       : 4
term                 : 15 16 17 19 20 21 22 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assing
    (4) statement -> . statementWhile
    (5) statement -> . statementFor
    (6) statement -> . statementIf
    (7) statement -> . callPrint
    (8) statement -> . callInput
    (9) statement -> . BREAK
    (10) assing -> . id EQUALS expr
    (11) assing -> . id EQUALS callInput
    (12) assing -> . id PLUS PLUS
    (13) assing -> . id MINUS MINUS
    (40) statementWhile -> . WHILE condition COLOM statement
    (41) statementWhile -> . WHILE condition COLOM statement break
    (42) statementWhile -> . WHILE condition COLOM statement break statement
    (54) statementFor -> . FOR TEXT IN ID COLOM statement
    (55) statementFor -> . FOR TEXT IN form
    (39) statementIf -> . IF condition COLOM statement
    (29) callPrint -> . PRINT LPARENT term COMMA ID RPARENT
    (30) callPrint -> . PRINT group
    (31) callPrint -> . PRINT LPARENT RPARENT
    (32) callPrint -> . callPrint statement
    (34) callInput -> . INPUT group
    (35) callInput -> . int LPARENT INPUT group RPARENT
    (36) callInput -> . callInput statement
    (14) id -> . ID
    (38) int -> . INT

    BREAK           shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 13
    INT             shift and go to state 18

    program                        shift and go to state 1
    statement                      shift and go to state 2
    assing                         shift and go to state 3
    statementWhile                 shift and go to state 4
    statementFor                   shift and go to state 5
    statementIf                    shift and go to state 6
    callPrint                      shift and go to state 7
    callInput                      shift and go to state 8
    id                             shift and go to state 10
    int                            shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assing
    (4) statement -> . statementWhile
    (5) statement -> . statementFor
    (6) statement -> . statementIf
    (7) statement -> . callPrint
    (8) statement -> . callInput
    (9) statement -> . BREAK
    (10) assing -> . id EQUALS expr
    (11) assing -> . id EQUALS callInput
    (12) assing -> . id PLUS PLUS
    (13) assing -> . id MINUS MINUS
    (40) statementWhile -> . WHILE condition COLOM statement
    (41) statementWhile -> . WHILE condition COLOM statement break
    (42) statementWhile -> . WHILE condition COLOM statement break statement
    (54) statementFor -> . FOR TEXT IN ID COLOM statement
    (55) statementFor -> . FOR TEXT IN form
    (39) statementIf -> . IF condition COLOM statement
    (29) callPrint -> . PRINT LPARENT term COMMA ID RPARENT
    (30) callPrint -> . PRINT group
    (31) callPrint -> . PRINT LPARENT RPARENT
    (32) callPrint -> . callPrint statement
    (34) callInput -> . INPUT group
    (35) callInput -> . int LPARENT INPUT group RPARENT
    (36) callInput -> . callInput statement
    (14) id -> . ID
    (38) int -> . INT

    $end            reduce using rule 1 (program -> statement .)
    BREAK           shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 13
    INT             shift and go to state 18

    statement                      shift and go to state 2
    program                        shift and go to state 19
    assing                         shift and go to state 3
    statementWhile                 shift and go to state 4
    statementFor                   shift and go to state 5
    statementIf                    shift and go to state 6
    callPrint                      shift and go to state 7
    callInput                      shift and go to state 8
    id                             shift and go to state 10
    int                            shift and go to state 17

state 3

    (3) statement -> assing .

    BREAK           reduce using rule 3 (statement -> assing .)
    WHILE           reduce using rule 3 (statement -> assing .)
    FOR             reduce using rule 3 (statement -> assing .)
    IF              reduce using rule 3 (statement -> assing .)
    PRINT           reduce using rule 3 (statement -> assing .)
    INPUT           reduce using rule 3 (statement -> assing .)
    ID              reduce using rule 3 (statement -> assing .)
    INT             reduce using rule 3 (statement -> assing .)
    $end            reduce using rule 3 (statement -> assing .)


state 4

    (4) statement -> statementWhile .

    BREAK           reduce using rule 4 (statement -> statementWhile .)
    WHILE           reduce using rule 4 (statement -> statementWhile .)
    FOR             reduce using rule 4 (statement -> statementWhile .)
    IF              reduce using rule 4 (statement -> statementWhile .)
    PRINT           reduce using rule 4 (statement -> statementWhile .)
    INPUT           reduce using rule 4 (statement -> statementWhile .)
    ID              reduce using rule 4 (statement -> statementWhile .)
    INT             reduce using rule 4 (statement -> statementWhile .)
    $end            reduce using rule 4 (statement -> statementWhile .)


state 5

    (5) statement -> statementFor .

    BREAK           reduce using rule 5 (statement -> statementFor .)
    WHILE           reduce using rule 5 (statement -> statementFor .)
    FOR             reduce using rule 5 (statement -> statementFor .)
    IF              reduce using rule 5 (statement -> statementFor .)
    PRINT           reduce using rule 5 (statement -> statementFor .)
    INPUT           reduce using rule 5 (statement -> statementFor .)
    ID              reduce using rule 5 (statement -> statementFor .)
    INT             reduce using rule 5 (statement -> statementFor .)
    $end            reduce using rule 5 (statement -> statementFor .)


state 6

    (6) statement -> statementIf .

    BREAK           reduce using rule 6 (statement -> statementIf .)
    WHILE           reduce using rule 6 (statement -> statementIf .)
    FOR             reduce using rule 6 (statement -> statementIf .)
    IF              reduce using rule 6 (statement -> statementIf .)
    PRINT           reduce using rule 6 (statement -> statementIf .)
    INPUT           reduce using rule 6 (statement -> statementIf .)
    ID              reduce using rule 6 (statement -> statementIf .)
    INT             reduce using rule 6 (statement -> statementIf .)
    $end            reduce using rule 6 (statement -> statementIf .)


state 7

    (7) statement -> callPrint .
    (32) callPrint -> callPrint . statement
    (3) statement -> . assing
    (4) statement -> . statementWhile
    (5) statement -> . statementFor
    (6) statement -> . statementIf
    (7) statement -> . callPrint
    (8) statement -> . callInput
    (9) statement -> . BREAK
    (10) assing -> . id EQUALS expr
    (11) assing -> . id EQUALS callInput
    (12) assing -> . id PLUS PLUS
    (13) assing -> . id MINUS MINUS
    (40) statementWhile -> . WHILE condition COLOM statement
    (41) statementWhile -> . WHILE condition COLOM statement break
    (42) statementWhile -> . WHILE condition COLOM statement break statement
    (54) statementFor -> . FOR TEXT IN ID COLOM statement
    (55) statementFor -> . FOR TEXT IN form
    (39) statementIf -> . IF condition COLOM statement
    (29) callPrint -> . PRINT LPARENT term COMMA ID RPARENT
    (30) callPrint -> . PRINT group
    (31) callPrint -> . PRINT LPARENT RPARENT
    (32) callPrint -> . callPrint statement
    (34) callInput -> . INPUT group
    (35) callInput -> . int LPARENT INPUT group RPARENT
    (36) callInput -> . callInput statement
    (14) id -> . ID
    (38) int -> . INT

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
    $end            reduce using rule 7 (statement -> callPrint .)
    BREAK           shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 13
    INT             shift and go to state 18

  ! BREAK           [ reduce using rule 7 (statement -> callPrint .) ]
  ! WHILE           [ reduce using rule 7 (statement -> callPrint .) ]
  ! FOR             [ reduce using rule 7 (statement -> callPrint .) ]
  ! IF              [ reduce using rule 7 (statement -> callPrint .) ]
  ! PRINT           [ reduce using rule 7 (statement -> callPrint .) ]
  ! INPUT           [ reduce using rule 7 (statement -> callPrint .) ]
  ! ID              [ reduce using rule 7 (statement -> callPrint .) ]
  ! INT             [ reduce using rule 7 (statement -> callPrint .) ]

    callPrint                      shift and go to state 7
    statement                      shift and go to state 20
    assing                         shift and go to state 3
    statementWhile                 shift and go to state 4
    statementFor                   shift and go to state 5
    statementIf                    shift and go to state 6
    callInput                      shift and go to state 8
    id                             shift and go to state 10
    int                            shift and go to state 17

state 8

    (8) statement -> callInput .
    (36) callInput -> callInput . statement
    (3) statement -> . assing
    (4) statement -> . statementWhile
    (5) statement -> . statementFor
    (6) statement -> . statementIf
    (7) statement -> . callPrint
    (8) statement -> . callInput
    (9) statement -> . BREAK
    (10) assing -> . id EQUALS expr
    (11) assing -> . id EQUALS callInput
    (12) assing -> . id PLUS PLUS
    (13) assing -> . id MINUS MINUS
    (40) statementWhile -> . WHILE condition COLOM statement
    (41) statementWhile -> . WHILE condition COLOM statement break
    (42) statementWhile -> . WHILE condition COLOM statement break statement
    (54) statementFor -> . FOR TEXT IN ID COLOM statement
    (55) statementFor -> . FOR TEXT IN form
    (39) statementIf -> . IF condition COLOM statement
    (29) callPrint -> . PRINT LPARENT term COMMA ID RPARENT
    (30) callPrint -> . PRINT group
    (31) callPrint -> . PRINT LPARENT RPARENT
    (32) callPrint -> . callPrint statement
    (34) callInput -> . INPUT group
    (35) callInput -> . int LPARENT INPUT group RPARENT
    (36) callInput -> . callInput statement
    (14) id -> . ID
    (38) int -> . INT

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
    $end            reduce using rule 8 (statement -> callInput .)
    BREAK           shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 13
    INT             shift and go to state 18

  ! BREAK           [ reduce using rule 8 (statement -> callInput .) ]
  ! WHILE           [ reduce using rule 8 (statement -> callInput .) ]
  ! FOR             [ reduce using rule 8 (statement -> callInput .) ]
  ! IF              [ reduce using rule 8 (statement -> callInput .) ]
  ! PRINT           [ reduce using rule 8 (statement -> callInput .) ]
  ! INPUT           [ reduce using rule 8 (statement -> callInput .) ]
  ! ID              [ reduce using rule 8 (statement -> callInput .) ]
  ! INT             [ reduce using rule 8 (statement -> callInput .) ]

    callInput                      shift and go to state 8
    statement                      shift and go to state 21
    assing                         shift and go to state 3
    statementWhile                 shift and go to state 4
    statementFor                   shift and go to state 5
    statementIf                    shift and go to state 6
    callPrint                      shift and go to state 7
    id                             shift and go to state 10
    int                            shift and go to state 17

state 9

    (9) statement -> BREAK .

    BREAK           reduce using rule 9 (statement -> BREAK .)
    WHILE           reduce using rule 9 (statement -> BREAK .)
    FOR             reduce using rule 9 (statement -> BREAK .)
    IF              reduce using rule 9 (statement -> BREAK .)
    PRINT           reduce using rule 9 (statement -> BREAK .)
    INPUT           reduce using rule 9 (statement -> BREAK .)
    ID              reduce using rule 9 (statement -> BREAK .)
    INT             reduce using rule 9 (statement -> BREAK .)
    $end            reduce using rule 9 (statement -> BREAK .)


state 10

    (10) assing -> id . EQUALS expr
    (11) assing -> id . EQUALS callInput
    (12) assing -> id . PLUS PLUS
    (13) assing -> id . MINUS MINUS

    EQUALS          shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 11

    (40) statementWhile -> WHILE . condition COLOM statement
    (41) statementWhile -> WHILE . condition COLOM statement break
    (42) statementWhile -> WHILE . condition COLOM statement break statement
    (43) condition -> . comparation
    (44) condition -> . comparation andor condition
    (45) comparation -> . factor compara factor
    (24) factor -> . NUMBER
    (25) factor -> . ID
    (26) factor -> . TEXT
    (27) factor -> . CADENA
    (28) factor -> . group
    (33) group -> . LPARENT expr RPARENT

    NUMBER          shift and go to state 28
    ID              shift and go to state 29
    TEXT            shift and go to state 30
    CADENA          shift and go to state 31
    LPARENT         shift and go to state 33

    condition                      shift and go to state 25
    comparation                    shift and go to state 26
    factor                         shift and go to state 27
    group                          shift and go to state 32

state 12

    (54) statementFor -> FOR . TEXT IN ID COLOM statement
    (55) statementFor -> FOR . TEXT IN form

    TEXT            shift and go to state 34


state 13

    (14) id -> ID .

    EQUALS          reduce using rule 14 (id -> ID .)
    PLUS            reduce using rule 14 (id -> ID .)
    MINUS           reduce using rule 14 (id -> ID .)
    RPARENT         reduce using rule 14 (id -> ID .)


state 14

    (39) statementIf -> IF . condition COLOM statement
    (43) condition -> . comparation
    (44) condition -> . comparation andor condition
    (45) comparation -> . factor compara factor
    (24) factor -> . NUMBER
    (25) factor -> . ID
    (26) factor -> . TEXT
    (27) factor -> . CADENA
    (28) factor -> . group
    (33) group -> . LPARENT expr RPARENT

    NUMBER          shift and go to state 28
    ID              shift and go to state 29
    TEXT            shift and go to state 30
    CADENA          shift and go to state 31
    LPARENT         shift and go to state 33

    condition                      shift and go to state 35
    comparation                    shift and go to state 26
    factor                         shift and go to state 27
    group                          shift and go to state 32

state 15

    (29) callPrint -> PRINT . LPARENT term COMMA ID RPARENT
    (30) callPrint -> PRINT . group
    (31) callPrint -> PRINT . LPARENT RPARENT
    (33) group -> . LPARENT expr RPARENT

    LPARENT         shift and go to state 36

    group                          shift and go to state 37

state 16

    (34) callInput -> INPUT . group
    (33) group -> . LPARENT expr RPARENT

    LPARENT         shift and go to state 33

    group                          shift and go to state 38

state 17

    (35) callInput -> int . LPARENT INPUT group RPARENT

    LPARENT         shift and go to state 39


state 18

    (38) int -> INT .

    LPARENT         reduce using rule 38 (int -> INT .)


state 19

    (2) program -> statement program .

    $end            reduce using rule 2 (program -> statement program .)


state 20

    (32) callPrint -> callPrint statement .

    BREAK           reduce using rule 32 (callPrint -> callPrint statement .)
    WHILE           reduce using rule 32 (callPrint -> callPrint statement .)
    FOR             reduce using rule 32 (callPrint -> callPrint statement .)
    IF              reduce using rule 32 (callPrint -> callPrint statement .)
    PRINT           reduce using rule 32 (callPrint -> callPrint statement .)
    INPUT           reduce using rule 32 (callPrint -> callPrint statement .)
    ID              reduce using rule 32 (callPrint -> callPrint statement .)
    INT             reduce using rule 32 (callPrint -> callPrint statement .)
    $end            reduce using rule 32 (callPrint -> callPrint statement .)


state 21

    (36) callInput -> callInput statement .

    BREAK           reduce using rule 36 (callInput -> callInput statement .)
    WHILE           reduce using rule 36 (callInput -> callInput statement .)
    FOR             reduce using rule 36 (callInput -> callInput statement .)
    IF              reduce using rule 36 (callInput -> callInput statement .)
    PRINT           reduce using rule 36 (callInput -> callInput statement .)
    INPUT           reduce using rule 36 (callInput -> callInput statement .)
    ID              reduce using rule 36 (callInput -> callInput statement .)
    INT             reduce using rule 36 (callInput -> callInput statement .)
    $end            reduce using rule 36 (callInput -> callInput statement .)


state 22

    (10) assing -> id EQUALS . expr
    (11) assing -> id EQUALS . callInput
    (15) expr -> . expr PLUS term
    (16) expr -> . expr MINUS term
    (17) expr -> . term
    (18) expr -> . MINUS expr
    (34) callInput -> . INPUT group
    (35) callInput -> . int LPARENT INPUT group RPARENT
    (36) callInput -> . callInput statement
    (19) term -> . term TIMES factor
    (20) term -> . term POT factor
    (21) term -> . term DIVIDE factor
    (22) term -> . term PERCENT factor
    (23) term -> . factor
    (38) int -> . INT
    (24) factor -> . NUMBER
    (25) factor -> . ID
    (26) factor -> . TEXT
    (27) factor -> . CADENA
    (28) factor -> . group
    (33) group -> . LPARENT expr RPARENT

    MINUS           shift and go to state 43
    INPUT           shift and go to state 16
    INT             shift and go to state 18
    NUMBER          shift and go to state 28
    ID              shift and go to state 29
    TEXT            shift and go to state 30
    CADENA          shift and go to state 31
    LPARENT         shift and go to state 33

    expr                           shift and go to state 40
    callInput                      shift and go to state 41
    term                           shift and go to state 42
    group                          shift and go to state 32
    int                            shift and go to state 17
    factor                         shift and go to state 44

state 23

    (12) assing -> id PLUS . PLUS

    PLUS            shift and go to state 45


state 24

    (13) assing -> id MINUS . MINUS

    MINUS           shift and go to state 46


state 25

    (40) statementWhile -> WHILE condition . COLOM statement
    (41) statementWhile -> WHILE condition . COLOM statement break
    (42) statementWhile -> WHILE condition . COLOM statement break statement

    COLOM           shift and go to state 47


state 26

    (43) condition -> comparation .
    (44) condition -> comparation . andor condition
    (52) andor -> . OR
    (53) andor -> . AND

    COLOM           reduce using rule 43 (condition -> comparation .)
    OR              shift and go to state 49
    AND             shift and go to state 50

    andor                          shift and go to state 48

state 27

    (45) comparation -> factor . compara factor
    (46) compara -> . LT
    (47) compara -> . GT
    (48) compara -> . LTE
    (49) compara -> . GTE
    (50) compara -> . COMPARATOR
    (51) compara -> . UNEQUALS

    LT              shift and go to state 52
    GT              shift and go to state 53
    LTE             shift and go to state 54
    GTE             shift and go to state 55
    COMPARATOR      shift and go to state 56
    UNEQUALS        shift and go to state 57

    compara                        shift and go to state 51

state 28

    (24) factor -> NUMBER .

    LT              reduce using rule 24 (factor -> NUMBER .)
    GT              reduce using rule 24 (factor -> NUMBER .)
    LTE             reduce using rule 24 (factor -> NUMBER .)
    GTE             reduce using rule 24 (factor -> NUMBER .)
    COMPARATOR      reduce using rule 24 (factor -> NUMBER .)
    UNEQUALS        reduce using rule 24 (factor -> NUMBER .)
    TIMES           reduce using rule 24 (factor -> NUMBER .)
    POT             reduce using rule 24 (factor -> NUMBER .)
    DIVIDE          reduce using rule 24 (factor -> NUMBER .)
    PERCENT         reduce using rule 24 (factor -> NUMBER .)
    PLUS            reduce using rule 24 (factor -> NUMBER .)
    MINUS           reduce using rule 24 (factor -> NUMBER .)
    BREAK           reduce using rule 24 (factor -> NUMBER .)
    WHILE           reduce using rule 24 (factor -> NUMBER .)
    FOR             reduce using rule 24 (factor -> NUMBER .)
    IF              reduce using rule 24 (factor -> NUMBER .)
    PRINT           reduce using rule 24 (factor -> NUMBER .)
    INPUT           reduce using rule 24 (factor -> NUMBER .)
    ID              reduce using rule 24 (factor -> NUMBER .)
    INT             reduce using rule 24 (factor -> NUMBER .)
    $end            reduce using rule 24 (factor -> NUMBER .)
    RPARENT         reduce using rule 24 (factor -> NUMBER .)
    COMMA           reduce using rule 24 (factor -> NUMBER .)
    OR              reduce using rule 24 (factor -> NUMBER .)
    AND             reduce using rule 24 (factor -> NUMBER .)
    COLOM           reduce using rule 24 (factor -> NUMBER .)


state 29

    (25) factor -> ID .
